--- a/style.css
+++ b/style.css
@@ -889,7 +889,8 @@ header .master_play {
 
     header .song_side {
         width: 100%;
-        height: 80%;
+        height: auto;
+        margin-bottom: 2px;
     }
 
     header .master_play {
@@ -983,7 +984,22 @@ header .master_play {
         bottom: 0;
     }
     header .song_side::before {
-        height: 250px;
+        height: 200px;
+    }
+    header .song_side .content h1 {
+        font-size: 17px;
+    }
+    header .song_side .content {
+        padding: 10px;
+    }
+    header .song_side .popular_song .h4 {
+        padding-top: 10px;
+    }
+    header .song_side .popular_song .pop_song {
+        margin-top: 5px;
+    }
+    header .song_side .popular_artists .items {
+        margin-top: 5px;
     }
     header .menu_side,
     .song_side {
