--- a/style.css
+++ b/style.css
@@ -842,7 +842,8 @@ header .master_play {
     html {
         font-size: 55%;
     }
-    header{
+
+    header {
         margin: 5px;
     }
 
@@ -862,9 +863,11 @@ header .master_play {
     header .song_side .navbar ul li {
         margin-bottom: 20px;
     }
+
     header .song_side .popular_song {
         margin-top: 2px;
     }
+
     header .song_side .navbar.active ul {
         display: block;
         position: absolute;
@@ -875,8 +878,10 @@ header .master_play {
         padding: 20px;
         height: 200px;
         width: 150px;
-        background: #8d8686;
+        background: #d9d4d4;
         border-radius: 15px 0px 0px 10px;
+        z-index: 99;
+        opacity: .9;
     }
 
     header .menu_side {
@@ -896,9 +901,11 @@ header .master_play {
     header .master_play {
         width: 100%;
     }
+
     header .song_side .popular_artists {
         margin-top: 2px;
     }
+
     header .song_side .popular_song .h4 {
         padding-top: 20px;
         font-size: 10px;
@@ -907,9 +914,11 @@ header .master_play {
     header .song_side .popular_artists .h4 {
         font-size: 10px;
     }
+
     header .menu_side .menu_song {
         height: 300px;
     }
+
     header .song_side nav .search {
         width: 100%;
         margin-right: 10%;
@@ -983,24 +992,31 @@ header .master_play {
         margin-top: 100px;
         bottom: 0;
     }
+
     header .song_side::before {
         height: 200px;
     }
+
     header .song_side .content h1 {
         font-size: 17px;
     }
+
     header .song_side .content {
         padding: 10px;
     }
+
     header .song_side .popular_song .h4 {
         padding-top: 10px;
     }
+
     header .song_side .popular_song .pop_song {
         margin-top: 5px;
     }
+
     header .song_side .popular_artists .items {
         margin-top: 5px;
     }
+
     header .menu_side,
     .song_side {
         box-shadow: 0px 3px 2px var(--color-box-shadow);
